# serializer version: 1
# name: test_fan_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'model_id': None,
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 131s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'preset_modes': list([
          'auto',
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_131s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': 'air-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 131s][fan.air_purifier_131s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': 0,
      'child_lock': False,
      'display_status': 'on',
      'friendly_name': 'Air Purifier 131s',
      'mode': 'sleep',
      'night_light': None,
      'percentage': None,
      'percentage_step': 33.333333333333336,
      'preset_mode': 'sleep',
      'preset_modes': list([
        'auto',
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_131s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'model_id': None,
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 200s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'preset_modes': list([
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_200s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': 'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 200s][fan.air_purifier_200s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'child_lock': False,
      'display_status': 'on',
      'friendly_name': 'Air Purifier 200s',
      'mode': 'manual',
      'night_light': <DeviceStatus.OFF: 'off'>,
      'percentage': 33,
      'percentage_step': 33.333333333333336,
      'preset_mode': None,
      'preset_modes': list([
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_200s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'model_id': None,
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 400s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'preset_modes': list([
          'auto',
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_400s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': '400s-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 400s][fan.air_purifier_400s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'child_lock': False,
      'display_status': 'on',
      'friendly_name': 'Air Purifier 400s',
      'mode': 'manual',
      'night_light': <DeviceStatus.OFF: 'off'>,
      'percentage': 25,
      'percentage_step': 25.0,
      'preset_mode': None,
      'preset_modes': list([
        'auto',
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_400s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'model_id': None,
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 600s][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'preset_modes': list([
          'auto',
          'sleep',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.air_purifier_600s',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 57>,
      'translation_key': 'vesync',
      'unique_id': '600s-purifier',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[Air Purifier 600s][fan.air_purifier_600s]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'child_lock': False,
      'display_status': 'on',
      'friendly_name': 'Air Purifier 600s',
      'mode': 'manual',
      'night_light': <DeviceStatus.OFF: 'off'>,
      'percentage': 25,
      'percentage_step': 25.0,
      'preset_mode': None,
      'preset_modes': list([
        'auto',
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.air_purifier_600s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'model_id': None,
      'name': 'Dimmable Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Dimmable Light][entities]
  list([
  ])
# ---
# name: test_fan_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'model_id': None,
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Dimmer Switch][entities]
  list([
  ])
# ---
# name: test_fan_state[Humidifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '200s-humidifier4321',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Classic200S',
      'model_id': None,
      'name': 'Humidifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Humidifier 200s][entities]
  list([
  ])
# ---
# name: test_fan_state[Humidifier 600S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-humidifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LUH-A602S-WUS',
      'model_id': None,
      'name': 'Humidifier 600S',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Humidifier 600S][entities]
  list([
  ])
# ---
# name: test_fan_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'model_id': None,
      'name': 'Outlet',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Outlet][entities]
  list([
  ])
# ---
# name: test_fan_state[SmartTowerFan][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'smarttowerfan',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LTF-F422S-KEU',
      'model_id': None,
      'name': 'SmartTowerFan',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[SmartTowerFan][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'preset_modes': list([
          'advancedSleep',
          'auto',
          'normal',
          'turbo',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'fan',
      'entity_category': None,
      'entity_id': 'fan.smarttowerfan',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': <FanEntityFeature: 59>,
      'translation_key': 'vesync',
      'unique_id': 'smarttowerfan',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_fan_state[SmartTowerFan][fan.smarttowerfan]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'active_time': None,
      'display_status': 'off',
      'friendly_name': 'SmartTowerFan',
      'mode': 'normal',
      'oscillating': True,
      'percentage': None,
      'percentage_step': 8.333333333333334,
      'preset_mode': 'normal',
      'preset_modes': list([
        'advancedSleep',
        'auto',
        'normal',
        'turbo',
      ]),
      'supported_features': <FanEntityFeature: 59>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.smarttowerfan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fan_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'model_id': None,
      'name': 'Temperature Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Temperature Light][entities]
  list([
  ])
# ---
# name: test_fan_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'model_id': None,
      'name': 'Wall Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: test_fan_state[Wall Switch][entities]
  list([
  ])
# ---
